[package]

name = "range"
version = "1.0.0"
authors = [
    "bvssvni <bvssvni@gmail.com>"
]
keywords = ["range", "addressing", "piston"]
description = "A library for range addressing"
license = "MIT"
readme = "README.md"
repository = "https://github.com/PistonDevelopers/range.git"
homepage = "https://github.com/PistonDevelopers/range"

[lib]

name = "range"
path = "src/lib.rs"
